# Surveysim

./: .gitignore  CHANGELOG.md  LICENSE  README.md  README_EN.md  SurveySim-提示词文档.md  docker-compose.yml
backend/: .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt
backend/configs/behavior_prompts/: analytical.yaml  concise.yaml  critical.yaml  detailed.yaml  emotional.yaml  honest.yaml  neutral.yaml  skeptical.yaml
backend/configs/personas/custom/: 32f9dbb3-e635-438c-9e7b-c9842d97d629.yaml  persona_backend_02.yaml  persona_beginner_10.yaml  persona_cto_08.yaml  persona_data_09.yaml  (+10 more)
backend/configs/providers/: deepseek.yaml  default.yaml  mimo.yaml  volcengine.yaml
backend/configs/scenarios/: debate.yaml  focus_group.yaml  idi.yaml  survey.yaml
backend/tests/: test_task_persistence.py
backend/virtual_survey/: config.py  main.py
backend/virtual_survey/api/: __init__.py  behavior_prompts.py  personas.py  providers.py  surveys.py  tasks.py  websocket.py
backend/virtual_survey/core/: __init__.py  engine.py  moderator.py  moderator_manager.py  respondent.py  session.py
backend/virtual_survey/export/: __init__.py  compatibility.py  result_io.py  survey_io.py
backend/virtual_survey/llm/: __init__.py  manager.py  pack.py  provider.py  rate_limiter.py
backend/virtual_survey/memory/: __init__.py  attitude.py  conversation.py  experience.py  store.py
backend/virtual_survey/models/: __init__.py  message.py  persona.py  scenario.py  survey.py  task.py
backend/virtual_survey/prompts/: __init__.py  manager.py  optimizer.py
backend/virtual_survey/storage/: __init__.py  config_store.py  database.py  task_store.py
(+64 files in other folders)
